// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BLASTInProgress /> should render when [rid="ABC123"] 1`] = `
<BLASTInProgress__StyledBLASTInProgress>
  <Loader
    color="#000"
    size={16}
  />
  <div>
    <div>
      <span>
        BLAST in progress
      </span>
      <RIDLink
        rid="ABC123"
      />
    </div>
    <RIDTiming
      interval={5}
      lastCheckedAt="2018-02-14T17:12:00.000000Z"
    />
  </div>
</BLASTInProgress__StyledBLASTInProgress>
`;

exports[`<BLASTInProgress /> should render when [rid=null] 1`] = `
<BLASTInProgress__StyledBLASTInProgress>
  <Loader
    color="#000"
    size={16}
  />
  <div>
    <div>
      <span>
        BLAST in progress
      </span>
      <RIDLink
        rid={null}
      />
    </div>
    <RIDTiming
      interval={5}
      lastCheckedAt="2018-02-14T17:12:00.000000Z"
    />
  </div>
</BLASTInProgress__StyledBLASTInProgress>
`;

exports[`<BLASTResults /> should render 1`] = `
<Box__BoxGroup>
  <BLAST__StyledBLASTResultsHeader>
    <strong>
      NCBI BLAST
    </strong>
    <a
      href="#"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="redo"
        pullRight={false}
      />
       Retry
    </a>
  </BLAST__StyledBLASTResultsHeader>
  <Table>
    <thead>
      <tr>
        <th>
          Accession
        </th>
        <th>
          Name
        </th>
        <th>
          E-value
        </th>
        <th>
          Score
        </th>
        <th>
          Identity
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td>
          <ExternalLink
            href="https://www.ncbi.nlm.nih.gov/nuccore/NC123"
          >
            NC123
          </ExternalLink>
        </td>
        <td>
          test
        </td>
        <td>
          3
        </td>
        <td>
          1
        </td>
        <td>
          0.50
        </td>
      </tr>
    </tbody>
  </Table>
</Box__BoxGroup>
`;

exports[`<NuVsBLAST /> should render 1`] = `
<BLASTResults
  hits={
    Array [
      Object {
        "accession": "BAR123",
        "align_len": 4,
        "evalue": 3,
        "identity": 2,
        "name": "bar",
        "score": 1,
      },
    ]
  }
  onBlast={[Function]}
/>
`;

exports[`<NuVsBLAST /> should render alert when no blast data available 1`] = `
<Alert__InfoAlert
  level={true}
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
    pullRight={false}
  />
  <span>
    This sequence has no BLAST information attached to it.
  </span>
  <BLAST__BLASTButton
    bsSize="small"
    icon="cloud"
    onClick={[Function]}
  >
    BLAST at NCBI
  </BLAST__BLASTButton>
</Alert__InfoAlert>
`;

exports[`<NuVsBLAST /> should render with an in-progress BLAST 1`] = `
<BLASTInProgress
  interval={5}
  lastCheckedAt="2018-02-14T17:12:00.000000Z"
  rid="ABC123"
/>
`;

exports[`<NuVsBLAST /> should render with no BLAST hits 1`] = `
<Box>
  <Box__BoxTitle>
    NCBI BLAST
  </Box__BoxTitle>
  <p>
    No BLAST hits found.
  </p>
</Box>
`;
